--- a/Vistas/App.xaml
+++ b/Vistas/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="Styles/StylesLabelsForm.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Styles/StylesTextBoxForm.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Styles/StylesButtonForm.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Styles/StylesTitles.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
