--- a/Vistas/Styles/StylesTextBoxForm.xaml
+++ b/Vistas/Styles/StylesTextBoxForm.xaml
@@ -1,16 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="StyleTextBoxForm">
-        <Setter Property="Control.Height" Value="24" />
-        <Setter Property="Control.VerticalAlignment" Value="Center" />
-        <Setter Property="Control.VerticalContentAlignment" Value="Center" />
-        <Setter Property="Control.HorizontalAlignment" Value="Left" />
-        <Setter Property="Control.Margin" Value="10" />
-        <Setter Property="Control.Width" Value="150" />
-        <Setter Property="Control.FontFamily" Value="Century Gothic" />
-        <Setter Property="Control.Foreground" Value="White" />
-        <Setter Property="Control.BorderBrush" Value="#ffd46f" />
-        <Setter Property="Control.Background" Value="Black" />
-        <Setter Property="Control.Background" Value="Black" />
+
+        <Style.Setters>
+            <Setter Property="Control.Height" Value="26" />
+            <Setter Property="Control.VerticalAlignment" Value="Center" />
+            <Setter Property="Control.VerticalContentAlignment" Value="Center" />
+            <Setter Property="Control.HorizontalAlignment" Value="Left" />
+            <Setter Property="Control.Margin" Value="10" />
+            <Setter Property="Control.Width" Value="150" />
+            <Setter Property="Control.FontFamily" Value="FreeSans" />
+            <Setter Property="Control.FontSize" Value="15"/>
+            <Setter Property="Control.Padding" Value="3"/>
+            <Setter Property="Control.Foreground" Value="White" />
+            <Setter Property="Control.BorderBrush" Value="#ffd46f" />
+            <Setter Property="Control.Background" Value="Black" />
+        </Style.Setters>
+        
+        <Style.Triggers>
+            <Trigger Property="Control.IsFocused" Value="True">
+                <Setter Property="Control.Foreground" Value="White"></Setter>
+            </Trigger>
+            <Trigger Property="Control.IsFocused" Value="False">
+                <Setter Property="Control.Foreground" Value="LightGray"></Setter>
+            </Trigger>
+        </Style.Triggers>
+        
     </Style>
 </ResourceDictionary>
