--- a/Vistas/winClientes.xaml
+++ b/Vistas/winClientes.xaml
@@ -1,22 +1,23 @@
 ﻿<Window x:Class="Vistas.winClientes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Formulario Cliente" WindowStyle="None" AllowsTransparency="True" Height="450" Width="500" WindowStartupLocation="CenterScreen" MinWidth="500" MinHeight="450" BorderBrush="Black" BorderThickness="1">
-    <Window.Background>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FF6C5823" Offset="0.942" />
-            <GradientStop Color="#FF232323" Offset="0.82600000000000007" />
-            <GradientStop Color="#FF232323" Offset="0.20299999999999996" />
-            <GradientStop Color="#FFF5CE52" Offset="0.994" />
-            <GradientStop Color="#FF313131" Offset="0.884" />
-        </LinearGradientBrush>
-    </Window.Background>
+        Title="Formulario Cliente" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="450" MouseLeftButtonDown="moveWindow">
+    
     <Grid>
-        <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-            <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-            <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-            <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
-        </DockPanel>
+        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Alta de Nuevo Cliente" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#232323" Offset="0.6" />
+                    <GradientStop Color="#121212" Offset="0.9" />
+                    <GradientStop Color="#070707" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
         <Grid Margin="0,40,0,0">
 
             <Grid.RowDefinitions>
@@ -26,17 +27,20 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="190*" />
-                    <ColumnDefinition Width="225*" />
+                    <ColumnDefinition Width="158*" />
+                    <ColumnDefinition Width="218*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40*"/>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="80*"/>
+                    <RowDefinition Height="30*"/>
+                    <RowDefinition Height="30*"/>
+                    <RowDefinition Height="30*"/>
+                    <RowDefinition Height="30*"/>
+                    <RowDefinition Height="30*"/>
                 </Grid.RowDefinitions>
+                
+                <Label Name="lblNewCliTitle" Content="Nuevo Cliente"  Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="94,23,78,59" />
+                <Label Name="lblNewCliDescrip" Content="Ingrese los datos del Cliente"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,71,64,33" Width="237" />
 
                 <Label Content="Apellido/s" Name="label1" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
                 <TextBox Name="txtApellidos" Grid.Row="1" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
@@ -52,11 +56,11 @@
 
                 <Label Content="E-mail" Name="label5" Grid.Row="5" Style="{StaticResource StyleLabelForm}"  Grid.Column="0" />
                 <TextBox Name="txtMail" Grid.Row="5" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
-
+                
             </Grid>
 
             <DockPanel Grid.Row="6" Grid.ColumnSpan="2">
-                <Button Content="GUARDAR" Height="50" Name="btnGuardar" Width="100"  Click="btnGuardar_Click" Style="{StaticResource ButtonFormBlack}"/>
+                <Button Content="GUARDAR" Name="btnGuardar"  Click="btnGuardar_Click" Style="{StaticResource ButtonFormBlack}"/>
             </DockPanel>
 
         </Grid>
