--- a/Vistas/Styles/StylesButtonForm.xaml
+++ b/Vistas/Styles/StylesButtonForm.xaml
@@ -2,8 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ButtonFormBlack" TargetType="{x:Type Button}">
 
-        <Style.Setters>
-            
+        <Style.Setters>            
             <Setter Property="Control.Width" Value="120" />
             <Setter Property="Control.Height" Value="40" />
             <Setter Property="Control.HorizontalAlignment" Value="Center" />
@@ -12,18 +11,29 @@
             
             <Setter Property="Control.Background" Value="#121212" />
             <Setter Property="Control.BorderBrush" Value="Black"/>
-            <Setter Property="Control.FontFamily" Value="Fonts/#FreeSans"/>
+            <Setter Property="Control.FontFamily" Value="FreeSans"/>
             <Setter Property="Control.FontWeight" Value="Bold"/>
             <Setter Property="Control.FontSize" Value="14" />
             <Setter Property="Control.Foreground" Value="#eeeeee"/>
-                
+            
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            
         </Style.Setters>
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-                <Setter Property = "FontSize" Value="16"/>
                 <Setter Property = "Foreground" Value="#000000"/>
+                <Setter Property="Background" Value="#FFD46F"></Setter>
             </Trigger>
-        </Style.Triggers>
+        </Style.Triggers>        
+       
     </Style>
 </ResourceDictionary>
