--- a/Vistas/Styles/StylesLabelsForm.xaml
+++ b/Vistas/Styles/StylesLabelsForm.xaml
@@ -5,7 +5,7 @@
         <Setter Property="Control.VerticalAlignment" Value="Center" />
         <Setter Property="Control.HorizontalAlignment" Value="Right" />
         <Setter Property="Control.Margin" Value="10,0" />
-        <Setter Property="Control.FontFamily" Value="FreeSans" />
+        <Setter Property="Control.FontFamily" Value="/Fonts/#FreeSans" />
         <Setter Property="Control.FontSize" Value="15" />
         <Setter Property="Control.Foreground" Value="#BFBFBF" />
         <Setter Property="Control.VerticalContentAlignment" Value="Center" />
