--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -1,27 +1,28 @@
 ﻿<Window x:Class="Vistas.winArticulos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Modulo de Artículos" WindowStyle="None" AllowsTransparency="True" MouseLeftButtonDown="moveWindow" Height="450" Width="500" Topmost="False" WindowStartupLocation="CenterScreen" MinHeight="315" MinWidth="402" BorderBrush="Black" BorderThickness="1">
-    <Window.Background>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FF6C5823" Offset="0.942" />
-            <GradientStop Color="#FF232323" Offset="0.82600000000000007" />
-            <GradientStop Color="#FF232323" Offset="0.20299999999999996" />
-            <GradientStop Color="#FFF5CE52" Offset="0.994" />
-            <GradientStop Color="#FF313131" Offset="0.884" />
-        </LinearGradientBrush>
-    </Window.Background>
+        Title="Modulo de Artículos"  Style="{StaticResource BasicWindowStyle}" WindowStyle="None" AllowsTransparency="True" Background="Transparent" MouseLeftButtonDown="moveWindow" Height="594" Width="419" Topmost="False" WindowStartupLocation="CenterScreen" MinHeight="315" MinWidth="402">
+    
     <Grid>
-        <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-            <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-            <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-            <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
-        </DockPanel>
+        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Alta de Nuevo Artículo" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#232323" Offset="0.6" />
+                    <GradientStop Color="#121212" Offset="0.9" />
+                    <GradientStop Color="#070707" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
         <Grid Margin="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="200*" />
-                <RowDefinition Height="110*" />
-                <RowDefinition Height="70*" />
+                <RowDefinition Height="354*" />
+                <RowDefinition Height="121*" />
+                <RowDefinition Height="80*" />
             </Grid.RowDefinitions>
 
             <Grid Name="grid1">
@@ -30,21 +31,25 @@
                     <ColumnDefinition Width="191*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="39*" />
+                    <RowDefinition Height="129*" />
                     <RowDefinition Height="39*" />
                     <RowDefinition Height="37*" />
                     <RowDefinition Height="36*" />
                     <RowDefinition Height="38*" />
                 </Grid.RowDefinitions>
-                <Label Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,5,4,0" />
+
+                <Label Name="lblNewArtTitle" Content="Nuevo Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="94,23,78,59" />
+                <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,71,64,33" Width="237" />
+
+                <Label Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
                 <Label Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
                 <Label Content="Precio:" Name="label4" Grid.Row="3" Style="{StaticResource StyleLabelForm}" />
-                <Label Content="Stock:" Name="label5" Grid.Row="3" Style="{StaticResource StyleLabelForm}" Margin="0,38,9,6" Grid.RowSpan="2" />
-                <CheckBox Content="" Height="20" HorizontalAlignment="Left" Margin="5,0" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
-                <TextBox  Height="22" Width="120" Name="txtPrecio" VerticalAlignment="Center" Grid.Column="1" Margin="5,0,114,0" Grid.Row="3" />
+                <Label Content="Stock:" Name="label5" Grid.Row="4" Style="{StaticResource StyleLabelForm}"  />
+                <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
+                <TextBox Style="{StaticResource StyleTextBoxForm}" Width="120" Name="txtPrecio" VerticalAlignment="Center" Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" />
 
                 <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
-                    <ComboBoxItem Content="Materias Primas" />
+                    <ComboBoxItem  Content="Materias Primas" />
                     <ComboBoxItem Content="Bebidas" />
                 </ComboBox>
                 <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120">
@@ -54,12 +59,12 @@
                 </ComboBox>
             </Grid>
 
-            <StackPanel Grid.Row="1" Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" >
-                <Label Content="Descripción:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
-                <TextBox  Name="txtDescripcion" Width="269" MinHeight="60" />
+            <StackPanel Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" Margin="0,12,0,0" Grid.Row="1">
+                <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
+                <TextBox Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="269" MinHeight="60" FontSize="13" />
             </StackPanel>
 
-            <Button Grid.Row="2" Content="GUARDAR" Name="btnGuardar" Click="btnGuardar_Click" Width="100" Height="50" Margin="0,0,10,4" Style="{StaticResource ButtonFormBlack}"/>
+            <Button Grid.Row="2" Content="GUARDAR" Name="btnGuardar" Click="btnGuardar_Click" Margin="0,0,10,4" Style="{StaticResource ButtonFormBlack}"/>
 
         </Grid>
     </Grid>
