--- a/Vistas/winClientes.xaml
+++ b/Vistas/winClientes.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Vistas.winClientes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Formulario Cliente" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="450" MouseLeftButtonDown="moveWindow">
+        Title="Formulario Cliente" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="400" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow">
     
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
