--- a/Vistas/winLogin.xaml
+++ b/Vistas/winLogin.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="Vistas.winLogin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Bienvenido" WindowStyle="None" AllowsTransparency="True" Background="#00000000" Height="580" Width="424" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+    Title="Bienvenido" Style="{StaticResource BasicWindowStyle}" WindowStyle="None" AllowsTransparency="True" Background="#00000000" Height="580" Width="424" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <!-- Controles de Ventana -->
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
                 <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
             <Border.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -33,13 +33,13 @@
 
             <Image Grid.Row="0" Margin="30" Name="imgLogo" Height="auto" Width="auto" Source="/Vistas;component/Images/holdemlogo.png" />
 
-            <TextBlock Grid.Row="1" Name="tblWelcome" Text="Bienvenido" FontFamily="FreeSans" FontSize="56" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" />
-            <TextBlock Grid.Row="2" Name="tblWelcomeInfo" Text="Por favor, introduzca sus credenciales para ingresar" FontFamily="FreeSans" FontSize="16" Foreground="#BFBFBF" VerticalAlignment="Center" HorizontalAlignment="Center" />
+            <TextBlock Grid.Row="1" Name="tblWelcome" Text="Bienvenido" FontSize="56" Style="{StaticResource FormTitle}" />
+            <TextBlock Grid.Row="2" Name="tblWelcomeInfo" Text="Por favor, introduzca sus credenciales para ingresar" FontSize="16" Foreground="#BFBFBF" VerticalAlignment="Center" HorizontalAlignment="Center" />
 
-            <TextBox Grid.Row="4" Name="txtUserLogin" FontFamily="FreeSans" FontSize="16" Foreground="#EEEEEE" BorderBrush="#ffd46f" Height="35" Width="240" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Black" GotFocus="UsrGotFocus" LostFocus="UsrLostFocus" />
-            <PasswordBox Grid.Row="5" Name="pwdPassLogin" FontFamily="FreeSans" FontSize="16" Foreground="#EEEEEE" BorderBrush="#ffd46f" Height="35" Width="240" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Black" GotFocus="PwdGotFocus" LostFocus="PwdLostFocus" />
+            <TextBox Grid.Row="4" Name="txtUserLogin" FontSize="16" Foreground="#EEEEEE" BorderBrush="#ffd46f" Height="35" Width="240" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Black" GotFocus="UsrGotFocus" LostFocus="UsrLostFocus" />
+            <PasswordBox Grid.Row="5" Name="pwdPassLogin" FontSize="16" Foreground="#EEEEEE" BorderBrush="#ffd46f" Height="35" Width="240" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Black" GotFocus="PwdGotFocus" LostFocus="PwdLostFocus" />
 
-            <Button Grid.Row="6" Height="40" Width="120" FontFamily="FreeSans" FontSize="14" HorizontalAlignment="center" VerticalAlignment="center" Content="Iniciar Sesión" Click="login" BorderBrush="Black" Background="#121212" Foreground="#eeeeee"/>
+            <Button Grid.Row="6" Content="Iniciar Sesión" Style="{StaticResource ButtonFormBlack}" Click="login"/>
 
         </Grid>
     </Grid>
