--- a/Vistas/Styles/StylesButtonForm.xaml
+++ b/Vistas/Styles/StylesButtonForm.xaml
@@ -32,6 +32,7 @@
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property = "Foreground" Value="#000000"/>
                 <Setter Property="Background" Value="#FFD46F"></Setter>
+                <Setter Property="FontSize" Value="16"></Setter>
             </Trigger>
         </Style.Triggers>        
        
