--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="Vistas.winMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:CD="clr-namespace:Vistas"
-        Title="winMesas" Height="450" Width="454" Background="#FF313131" MinHeight="450" MinWidth="454"
-        WindowStartupLocation="CenterScreen" WindowStyle="None" >
-
+        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="454" Background="#FF313131" MinHeight="450" MinWidth="454" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen">
     <Grid>
         <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
             <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
