--- a/Vistas/Styles/Dictionary1.xaml
+++ b/Vistas/Styles/Dictionary1.xaml
@@ -23,12 +23,12 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    <Style TargetType="{x:Type Button}" x:Key="BotondeMesa">
+    <Style TargetType="{x:Type Button}" x:Key="BotondeMesaVerde">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Button Background="{TemplateBinding Background}" Margin="10,5" MaxWidth="150">
+                        <Button Background="#99ff76" Margin="10,5">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="80*" />
@@ -43,6 +43,25 @@
             </Setter>
         </Style.Setters>
     </Style>
-    
+    <Style TargetType="{x:Type Button}" x:Key="BotondeMesaRoja">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="Tomato" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
     
 </ResourceDictionary>
