--- a/Vistas/winConsultaMesas.xaml
+++ b/Vistas/winConsultaMesas.xaml
@@ -1,10 +1,25 @@
 ﻿<Window x:Class="Vistas.winConsultaMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winConsultaMesas" Height="300" Width="300">
+        Title="winConsultaMesas" Height="300" Width="300" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="300" MinWidth="300">
     <Grid>
-        <Label Content="Ingrese el número de mesas:" Height="28" HorizontalAlignment="Left" Margin="58,27,0,0" Name="lblNroMesas" VerticalAlignment="Top" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="80,61,0,0" Name="txtNroMesas" VerticalAlignment="Top" Width="120" />
-        <Button Content="Aceptar" Height="23" HorizontalAlignment="Left" Margin="103,100,0,0" Name="btnAceptar" VerticalAlignment="Top" Width="75" Click="btnAceptar_Click" />
+        <Border Style="{StaticResource MainGridStyle}">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblConsultaTitle" Content="Distribución de mesas" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+        </Border>
+        <Grid Margin="0,40,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30*"/>
+                <RowDefinition Height="30*"/>
+                <RowDefinition Height="40*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="Ingrese el número de mesas:" Height="28" VerticalAlignment="Bottom" HorizontalAlignment="Center" Name="lblNroMesas" Style="{StaticResource StyleLabelForm}"/>
+            <TextBox Grid.Row="1" Height="30" HorizontalAlignment="Center" Name="txtNroMesas" Width="120" Style="{StaticResource StyleTextBoxForm}"/>
+            <Button Grid.Row="2" Content="Aceptar" Width="90" Height="40" HorizontalAlignment="Center" Click="btnAceptar_Click" Style="{StaticResource ButtonFormBlack}"/>
+        </Grid>
+        
     </Grid>
 </Window>
