--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -1,45 +1,84 @@
 ﻿<Window x:Class="Vistas.winMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="454" MinHeight="500" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen">
+        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="1280" MinHeight="720" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        >
+        <!--xmlns:svc="clr-namespace:Vistas"-->
+        
+        <!--xmlns:svc="clr-namespace:Vistas;assembly=winMesas"-->
+        
+        
     <Window.Resources>
         <XmlDataProvider x:Key="estado_Mesa" Source="EstadosMesa.xml" XPath="/colores" IsInitialLoadEnabled="True"/>
     </Window.Resources>
-    
+     
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
                 <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Label Name="lblWinTitle" Content="Gestión de Mesas - HOLDEM" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
         <Grid Margin="0,40,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="10*" />
                 <RowDefinition Height="10*" />
                 <RowDefinition Height="80*" />
                 <RowDefinition Height="10*" />
             </Grid.RowDefinitions>
             <Label 
             Name="txtTitle"
-            Foreground="White"
             Content="LISTADO DE MESAS"
-            FontFamily="FreeSans"
-            FontSize="18"
-            FontWeight="Bold"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Center"/>
-
+            Style="{StaticResource FormTitle}"
+                />
+            <Button
+                Content="Volver"
+                FontSize="16"
+                Foreground="White"
+                Width="50"
+                Height="auto"
+                Margin="10"
+                HorizontalAlignment="Left"
+                Background="Transparent"   
+                BorderBrush="black"
+                />
+            <!--
             <DockPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 
                 <Label Content="ESTADO DE MESA: " FontFamily="Century Gothic" Foreground="Gold" Background="Black" FontWeight="ExtraBold" FontSize="12" />
-                <ComboBox Height="25" Name="cmbEstadoMesas" Width="130" ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath= estado/@name}">
-                </ComboBox>
+                <ListBox Height="25" Name="cmbEstadoMesas" Width="130" ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath= estado/@name}"/>
             </DockPanel>
-            
+            -->
             <!--Grid mesas-->
-            <Grid x:Name="grdMesas"  Grid.Row="2" Margin="20,0" Loaded="grdMesas_Loaded">
+            
+            <Grid x:Name="grdMesasMain" Grid.Row="1" Margin="40,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="30*"></ColumnDefinition>
+                    <ColumnDefinition Width="70*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                
+                <!--Sección de los estados-->
+                <StackPanel x:Name="stkEstados" Margin="20,0">
+                    <StackPanel.Resources>
+                        <!--<svc:ConversorDeEstados x:Key="conversorDeEstados"/>-->
+                    </StackPanel.Resources>
+                    <Label x:Name="lblEstados" Content="Estados" FontSize="28" Style="{StaticResource FormTitle}"></Label>
+                    <ListBox 
+                        x:Name="lstEstados" 
+                        FontSize="20" 
+                        Padding="0,20"
+                        Height="auto" 
+                        Width="250" 
+                        Margin="40" 
+                        Style="{StaticResource StyleListBox}"
+                        ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath=estado/@name}">                        
+                    </ListBox>
+                </StackPanel>
+
+                <!--Sección de las Mesas-->
+                <Grid x:Name="grdMesas"  Grid.Column="1" Margin="20,0" Loaded="grdMesas_Loaded"/>
+                
+                
             </Grid>
 
             <StackPanel Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
