--- a/Vistas/ABMArticulos.xaml
+++ b/Vistas/ABMArticulos.xaml
@@ -2,13 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="ABMArticulos" Height="400" Width="600" Loaded="Window_Loaded"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+        Title="ABMArticulos" Height="450" Width="600" Loaded="Window_Loaded"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
      <ObjectDataProvider
-            x:Key="LIST_ARTICULO"
-            ObjectType="{x:Type svc:TrabajarArticulos}"
-            MethodName="TraerArticulosColeccion">            
-        </ObjectDataProvider>
+        x:Key="LIST_ARTICULO"
+        ObjectType="{x:Type svc:TrabajarArticulos}"
+        MethodName="TraerArticulosColeccion">            
+    </ObjectDataProvider>
     </Window.Resources>
 
     <Grid>
@@ -42,9 +42,10 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
-                    <Button x:Name="btnNuevoArt" Content="Nuevo" Margin="7,0" Height="30" Width="70" Click="btn_Agregar"></Button>
-                    <Button x:Name="btnModifArt" Content="Modificar" Margin="7,0" Height="30" Width="70" Click="btnModifArt_Click"></Button>
-                    <Button x:Name="btnDeleteArt" Content="Eliminar" Margin="7,0" Height="30" Width="70"></Button>
+                    <Button x:Name="btnNuevoArt" Content="Nuevo" Margin="3,0" Height="30" Width="70" Click="btn_Agregar"></Button>
+                    <Button x:Name="btnModifArt" Content="Modificar" Margin="3,0" Height="30" Width="70" Click="btnModifArt_Click"></Button>
+                    <Button x:Name="btnDeleteArt" Content="Eliminar" Margin="3,0" Height="30" Width="70" Click="btnDeleteArt_Click"></Button>
+                    <Button x:Name="btnShowList" Content="Ver Lista" Margin="3,0" Height="30" Width="70" Click="btnShowList_Click"></Button>
                 </StackPanel>
                 <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
                     <Button x:Name="btn_first" Content="|&lt;" Margin="7,0" Height="30" Width="30" Click="btn_first_Click"></Button>
@@ -54,7 +55,7 @@
                 </StackPanel>
             </Grid>
 
-            <Grid Grid.Row="1" Margin="80,20" Background="#262627">
+            <Grid Name="grdArticulos" Grid.Row="1" Margin="80,20" Background="#262627">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -81,8 +82,10 @@
                 <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Categoria.Cat_Descrip}" Grid.Column="1" Grid.Row="3" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
                 <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Unidad_Medida.Um_Descrip}" Grid.Column="1" Grid.Row="4" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
                 <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Art_Precio}" Grid.Column="1" Grid.Row="5" Height="auto" Margin="0,7" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                
+                
+            
             </Grid>
-
         </Grid>
 
     </Grid>
